
* Properly emit ``duplicate-key`` when Enum members are duplicate dictionary keys

  Closes #5150

* Use ``py-version`` setting for alternative union syntax check (PEP 604),
  instead of the Python interpreter version.

* Subclasses of ``dict`` are regarded as reversible by the ``bad-reversed-sequence`` checker
  (Python 3.8 onwards).

  Closes #4981

* Added new checker ``use-implicit-booleaness-not-comparison``: Emitted when
  collection literal comparison is being used to check for emptiness.

  Closes #4774

* ``mising-param-doc`` now correctly parses asterisks for variable length and
  keyword parameters

  Closes #3733

* Update ``literal-comparison``` checker to ignore tuple literals

  Closes #3031

* Fix double emitting of ``not-callable`` on inferrable ``properties``

  Closes #4426

* Fix ``missing-function-docstring`` not being able to check ``__init__`` and other
  magic methods even if the ``no-docstring-rgx`` setting was set to do so


What's New in Pylint 2.11.2?
============================
Release date: TBA

..
  Put bug fixes that should not wait for a new minor version here

* Pyreverse - Add the project root directory to sys.path

  Closes #2479

* Don't emit ``consider-using-f-string`` if ``py-version`` is set to Python < ``3.6``.
  ``f-strings`` were added in Python ``3.6``

  Closes #5019

* Fix regression for ``unspecified-encoding`` with ``pathlib.Path.read_text()``

  Closes #5029

* Don't emit ``consider-using-f-string`` if the variables to be interpolated include a backslash

* Fixed false positive for ``cell-var-from-loop`` when variable is used as the default
  value for a keyword-only parameter.

  Closes #5012

* Fix false-positive ``undefined-variable`` with ``Lambda``, ``IfExp``, and
  assignment expression.

* Fix false-positive ``useless-suppression`` for ``wrong-import-order``

  Closes #2366

* Fixed ``toml`` dependency issue

  Closes #5066

* Fix false-positive ``useless-suppression`` for ``line-too-long``

  Closes #4212
