@@ -86,6 +86,8 @@ Other Changes
 
   Closes #4426
 
+* Support configuring mixin class pattern via ``mixin-class-rgx``
+
 * ``mising-param-doc`` now correctly parses asterisks for variable length and
   keyword parameters
 
