@@ -808,13 +808,12 @@ a metaclass class method.",
         self._first_attrs = []
         self._meth_could_be_func = None
 
+    def open(self) -> None:
+        self._mixin_class_rgx = get_global_option(self, "mixin-class-rgx")
+
     @astroid.decorators.cachedproperty
     def _dummy_rgx(self):
         return get_global_option(self, "dummy-variables-rgx", default=None)
-
-    @astroid.decorators.cachedproperty
-    def _mixin_rgx(self):
-        return get_global_option(self, "mixin-class-rgx", default=True)
 
     @astroid.decorators.cachedproperty
     def _ignore_mixin(self):
@@ -1033,7 +1032,7 @@ a metaclass class method.",
 
     def _check_attribute_defined_outside_init(self, cnode: nodes.ClassDef) -> None:
         # check access to existent members on non metaclass classes
-        if self._ignore_mixin and self._mixin_rgx.match(cnode.name.lower()):
+        if self._ignore_mixin and self._mixin_class_rgx.match(cnode.name):
             # We are in a mixin class. No need to try to figure out if
             # something is missing, since it is most likely that it will
             # miss.
