@@ -443,7 +443,12 @@ SEQUENCE_TYPES = {
 
 
 def _emit_no_member(
-    node, owner, owner_name, ignored_mixins, ignored_none, mixin_class_rgx
+    node,
+    owner,
+    owner_name,
+    mixin_class_rgx: Pattern[str],
+    ignored_mixins=True,
+    ignored_none=True,
 ):
     """Try to see if no-member should be emitted for the given owner.
 
@@ -464,7 +469,7 @@ def _emit_no_member(
         return False
     if is_super(owner) or getattr(owner, "type", None) == "metaclass":
         return False
-    if owner_name and ignored_mixins and mixin_class_rgx.match(owner_name.lower()):
+    if owner_name and ignored_mixins and mixin_class_rgx.match(owner_name):
         return False
     if isinstance(owner, nodes.FunctionDef) and (
         owner.decorators or owner.is_abstract()
@@ -785,12 +790,11 @@ class TypeChecker(BaseChecker):
         (
             "mixin-class-rgx",
             {
-                "default": ".*mixin",
+                "default": ".*[Mm]ixin",
                 "type": "regexp",
                 "metavar": "<regexp>",
-                "help": "Indicates which classes are considered mixins if "
-                "ignore-mixin-members is True. Defaults to ending in Mixin "
-                "(case insensitive).",
+                "help": "Regex pattern to define which classes are considered mixins "
+                "ignore-mixin-members is set to 'yes'",
             },
         ),
         (
@@ -800,7 +804,8 @@ class TypeChecker(BaseChecker):
                 "type": "yn",
                 "metavar": "<y_or_n>",
                 "help": "Tells whether missing members accessed in mixin "
-                "class should be ignored.",
+                "class should be ignored. A class is considered mixin if its name matches "
+                "the mixin-class-rgx option.",
             },
         ),
         (
@@ -910,6 +915,7 @@ accessed. Python regular expressions are accepted.",
     def open(self) -> None:
         py_version = get_global_option(self, "py-version")
         self._py310_plus = py_version >= (3, 10)
+        self._mixin_class_rgx = get_global_option(self, "mixin-class-rgx")
 
     @astroid.decorators.cachedproperty
     def _suggestion_mode(self):
@@ -1052,9 +1058,9 @@ accessed. Python regular expressions are accepted.",
                     node,
                     owner,
                     name,
+                    self._mixin_class_rgx,
                     ignored_mixins=self.config.ignore_mixin_members,
                     ignored_none=self.config.ignore_none,
-                    mixin_class_rgx=self.config.mixin_class_rgx,
                 ):
                     continue
                 missingattr.add((owner, name))
