@@ -68,6 +68,8 @@ Release date: TBA
 
   Closes #4981
 
+* Support configuring mixin class pattern via ``mixin-class-rgx``
+
 * Added new checker ``use-implicit-booleaness-not-comparison``: Emitted when
   collection literal comparison is being used to check for emptiness.
 
@@ -351,8 +353,6 @@ Release date: 2021-08-20
   Close #4120
   Close #4118
 
-* Support configuring mixin class pattern via ``mixin-class-rgx`` when ``ignore-mixin-members`` is enabled.
-
 * Don't emit ``no-member`` error if guarded behind if statement.
 
   Ref #1162
@@ -465,6 +465,7 @@ Release date: 2021-08-20
 * Improve performance when inferring ``Call`` nodes, by utilizing caching.
 
 * Improve error message for invalid-metaclass when the node is an Instance.
+
 
 What's New in Pylint 2.9.6?
 ===========================
